{
  "version": 4,
  "terraform_version": "0.12.10",
  "serial": 193,
  "lineage": "8c12f67d-3b53-0f94-34bd-5073b631bc0b",
  "resources": [
    {
      "module": "module.tgw_frankfurt",
      "mode": "managed",
      "type": "aws_ec2_transit_gateway",
      "name": "tgw_frankfurt",
      "provider": "module.tgw_frankfurt.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "amazon_side_asn": 64512,
            "arn": "arn:aws:ec2:eu-central-1:190563471247:transit-gateway/tgw-0199011b6114a7170",
            "association_default_route_table_id": "tgw-rtb-05b9afec4837ecf8f",
            "auto_accept_shared_attachments": "disable",
            "default_route_table_association": "enable",
            "default_route_table_propagation": "enable",
            "description": "Central TGW in Frankfurt",
            "dns_support": "enable",
            "id": "tgw-0199011b6114a7170",
            "owner_id": "190563471247",
            "propagation_default_route_table_id": "tgw-rtb-05b9afec4837ecf8f",
            "vpn_ecmp_support": "enable"
          }
        }
      ]
    },
    {
      "module": "module.tgw_frankfurt",
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "attach_vpc_az1",
      "provider": "module.tgw_frankfurt.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "dns_support": "enable",
            "id": "tgw-attach-0f3778fbfca6d1997",
            "ipv6_support": "disable",
            "subnet_ids": [
              "subnet-075051dd03d850634"
            ],
            "transit_gateway_default_route_table_association": true,
            "transit_gateway_default_route_table_propagation": true,
            "transit_gateway_id": "tgw-0199011b6114a7170",
            "vpc_id": "vpc-0de5e3e8487f8cf64",
            "vpc_owner_id": "190563471247"
          },
          "depends_on": [
            "aws_ec2_transit_gateway.tgw_frankfurt"
          ]
        }
      ]
    },
    {
      "module": "module.tgw_frankfurt",
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "attach_vpc_az2",
      "provider": "module.tgw_frankfurt.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "dns_support": "enable",
            "id": "tgw-attach-0f59807e1c56f74fe",
            "ipv6_support": "disable",
            "subnet_ids": [
              "subnet-0250781c79ee17ed0"
            ],
            "transit_gateway_default_route_table_association": true,
            "transit_gateway_default_route_table_propagation": true,
            "transit_gateway_id": "tgw-0199011b6114a7170",
            "vpc_id": "vpc-0075f6bbfd1e967f0",
            "vpc_owner_id": "190563471247"
          },
          "depends_on": [
            "aws_ec2_transit_gateway.tgw_frankfurt"
          ]
        }
      ]
    },
    {
      "module": "module.tgw_frankfurt",
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "attach_vpc_az3",
      "provider": "module.tgw_frankfurt.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "dns_support": "enable",
            "id": "tgw-attach-0d796c25741f0a1db",
            "ipv6_support": "disable",
            "subnet_ids": [
              "subnet-03e2cd1dbc97e590f"
            ],
            "transit_gateway_default_route_table_association": true,
            "transit_gateway_default_route_table_propagation": true,
            "transit_gateway_id": "tgw-0199011b6114a7170",
            "vpc_id": "vpc-0051f454d1c1ce8d8",
            "vpc_owner_id": "190563471247"
          },
          "depends_on": [
            "aws_ec2_transit_gateway.tgw_frankfurt"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_frankfurt_az3",
      "mode": "managed",
      "type": "aws_instance",
      "name": "vm",
      "provider": "module.ec2_frankfurt_az3.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cc0a36f626a4fdf5",
            "arn": "arn:aws:ec2:eu-central-1:190563471247:instance/i-0c49a3d0157d494f4",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0c49a3d0157d494f4",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "my_keypair",
            "monitoring": false,
            "primary_network_interface_id": "eni-042b94dcc6922b6b7",
            "private_dns": "ip-10-3-1-70.eu-central-1.compute.internal",
            "private_ip": "10.3.1.70",
            "public_ip": "18.196.17.107",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0b73bb2d63ae4528e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03e2cd1dbc97e590f",
            "tags": {
              "Name": "HelloWorld"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0e6e3e0b21d63003a"
            ]
          },
          "depends_on": [
            "aws_security_group.sgroup"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_frankfurt_az1",
      "mode": "managed",
      "type": "aws_instance",
      "name": "vm",
      "provider": "module.ec2_frankfurt_az1.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cc0a36f626a4fdf5",
            "arn": "arn:aws:ec2:eu-central-1:190563471247:instance/i-0611380f89309f054",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0611380f89309f054",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "my_keypair",
            "monitoring": false,
            "primary_network_interface_id": "eni-0b26a6c0436a5243b",
            "private_dns": "ip-10-1-1-138.eu-central-1.compute.internal",
            "private_ip": "10.1.1.138",
            "public_ip": "54.93.44.226",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-054aefd1d7c132ffd",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-075051dd03d850634",
            "tags": {
              "Name": "HelloWorld"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0090bc6726485bd72"
            ]
          },
          "depends_on": [
            "aws_security_group.sgroup"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_frankfurt_az2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "vm",
      "provider": "module.ec2_frankfurt_az2.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cc0a36f626a4fdf5",
            "arn": "arn:aws:ec2:eu-central-1:190563471247:instance/i-0a1227f35875d6147",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0a1227f35875d6147",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "my_keypair",
            "monitoring": false,
            "primary_network_interface_id": "eni-0cbe0740740a75992",
            "private_dns": "ip-10-2-1-133.eu-central-1.compute.internal",
            "private_ip": "10.2.1.133",
            "public_ip": "18.196.44.195",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0b84c5fcb458e6392",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0250781c79ee17ed0",
            "tags": {
              "Name": "HelloWorld"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-042317c72d29492e7"
            ]
          },
          "depends_on": [
            "aws_security_group.sgroup"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_frankfurt_az3",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "module.vpc_frankfurt_az3.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-064cb81a8f83b03be",
            "owner_id": "190563471247",
            "vpc_id": "vpc-0051f454d1c1ce8d8"
          }
        }
      ]
    },
    {
      "module": "module.vpc_frankfurt_az2",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "module.vpc_frankfurt_az2.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0d244534268c2ee24",
            "owner_id": "190563471247",
            "vpc_id": "vpc-0075f6bbfd1e967f0"
          }
        }
      ]
    },
    {
      "module": "module.vpc_frankfurt_az1",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "module.vpc_frankfurt_az1.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0b358b3f95d410743",
            "owner_id": "190563471247",
            "vpc_id": "vpc-0de5e3e8487f8cf64"
          }
        }
      ]
    },
    {
      "module": "module.vpc_frankfurt_az3",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-rt",
      "provider": "module.vpc_frankfurt_az3.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-050d7b8d10323078b",
            "owner_id": "190563471247",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "tgw-0199011b6114a7170",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "cidr_block": "193.15.240.60/32",
                "egress_only_gateway_id": null,
                "gateway_id": "igw-064cb81a8f83b03be",
                "instance_id": null,
                "ipv6_cidr_block": null,
                "nat_gateway_id": null,
                "network_interface_id": null,
                "transit_gateway_id": null,
                "vpc_peering_connection_id": null
              }
            ],
            "tags": {},
            "vpc_id": "vpc-0051f454d1c1ce8d8"
          },
          "depends_on": [
            "aws_internet_gateway.gw"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_frankfurt_az2",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-rt",
      "provider": "module.vpc_frankfurt_az2.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-046d802c30a2d10b6",
            "owner_id": "190563471247",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "tgw-0199011b6114a7170",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "cidr_block": "193.15.240.60/32",
                "egress_only_gateway_id": null,
                "gateway_id": "igw-0d244534268c2ee24",
                "instance_id": null,
                "ipv6_cidr_block": null,
                "nat_gateway_id": null,
                "network_interface_id": null,
                "transit_gateway_id": null,
                "vpc_peering_connection_id": null
              }
            ],
            "tags": {},
            "vpc_id": "vpc-0075f6bbfd1e967f0"
          },
          "depends_on": [
            "aws_internet_gateway.gw"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_frankfurt_az1",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-rt",
      "provider": "module.vpc_frankfurt_az1.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0259d047e31cf4e84",
            "owner_id": "190563471247",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "tgw-0199011b6114a7170",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "cidr_block": "193.15.240.60/32",
                "egress_only_gateway_id": null,
                "gateway_id": "igw-0b358b3f95d410743",
                "instance_id": null,
                "ipv6_cidr_block": null,
                "nat_gateway_id": null,
                "network_interface_id": null,
                "transit_gateway_id": null,
                "vpc_peering_connection_id": null
              }
            ],
            "tags": {},
            "vpc_id": "vpc-0de5e3e8487f8cf64"
          },
          "depends_on": [
            "aws_internet_gateway.gw"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_frankfurt_az3",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "priv-rt_main",
      "provider": "module.vpc_frankfurt_az3.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0018c1830c221af98",
            "route_table_id": "rtb-050d7b8d10323078b",
            "subnet_id": "subnet-03e2cd1dbc97e590f"
          },
          "depends_on": [
            "aws_route_table.private-rt",
            "aws_subnet.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_frankfurt_az2",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "priv-rt_main",
      "provider": "module.vpc_frankfurt_az2.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-047709630440f01ce",
            "route_table_id": "rtb-046d802c30a2d10b6",
            "subnet_id": "subnet-0250781c79ee17ed0"
          },
          "depends_on": [
            "aws_route_table.private-rt",
            "aws_subnet.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_frankfurt_az1",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "priv-rt_main",
      "provider": "module.vpc_frankfurt_az1.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0083b90384e50a005",
            "route_table_id": "rtb-0259d047e31cf4e84",
            "subnet_id": "subnet-075051dd03d850634"
          },
          "depends_on": [
            "aws_route_table.private-rt",
            "aws_subnet.main"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_frankfurt_az3",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sgroup",
      "provider": "module.ec2_frankfurt_az3.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:190563471247:security-group/sg-0e6e3e0b21d63003a",
            "description": "Allow traffic from private subnet",
            "egress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/8"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              }
            ],
            "id": "sg-0e6e3e0b21d63003a",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/8"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "10.3.1.0/24"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "193.15.240.60/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sg_test_vm",
            "name_prefix": null,
            "owner_id": "190563471247",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0051f454d1c1ce8d8"
          }
        }
      ]
    },
    {
      "module": "module.ec2_frankfurt_az1",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sgroup",
      "provider": "module.ec2_frankfurt_az1.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:190563471247:security-group/sg-0090bc6726485bd72",
            "description": "Allow traffic from private subnet",
            "egress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/8"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              }
            ],
            "id": "sg-0090bc6726485bd72",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/8"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "10.1.1.0/24"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "193.15.240.60/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sg_test_vm",
            "name_prefix": null,
            "owner_id": "190563471247",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0de5e3e8487f8cf64"
          }
        }
      ]
    },
    {
      "module": "module.ec2_frankfurt_az2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sgroup",
      "provider": "module.ec2_frankfurt_az2.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:190563471247:security-group/sg-042317c72d29492e7",
            "description": "Allow traffic from private subnet",
            "egress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/8"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              }
            ],
            "id": "sg-042317c72d29492e7",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/8"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "10.2.1.0/24"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "193.15.240.60/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sg_test_vm",
            "name_prefix": null,
            "owner_id": "190563471247",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0075f6bbfd1e967f0"
          }
        }
      ]
    },
    {
      "module": "module.vpc_frankfurt_az3",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "module.vpc_frankfurt_az3.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:190563471247:subnet/subnet-03e2cd1dbc97e590f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.3.1.0/24",
            "id": "subnet-03e2cd1dbc97e590f",
            "map_public_ip_on_launch": false,
            "owner_id": "190563471247",
            "tags": {
              "Name": "vpc_az3"
            },
            "vpc_id": "vpc-0051f454d1c1ce8d8"
          }
        }
      ]
    },
    {
      "module": "module.vpc_frankfurt_az2",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "module.vpc_frankfurt_az2.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:190563471247:subnet/subnet-0250781c79ee17ed0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.2.1.0/24",
            "id": "subnet-0250781c79ee17ed0",
            "map_public_ip_on_launch": false,
            "owner_id": "190563471247",
            "tags": {
              "Name": "vpc_az2"
            },
            "vpc_id": "vpc-0075f6bbfd1e967f0"
          }
        }
      ]
    },
    {
      "module": "module.vpc_frankfurt_az1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "module.vpc_frankfurt_az1.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:190563471247:subnet/subnet-075051dd03d850634",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.1.1.0/24",
            "id": "subnet-075051dd03d850634",
            "map_public_ip_on_launch": false,
            "owner_id": "190563471247",
            "tags": {
              "Name": "vpc_az1"
            },
            "vpc_id": "vpc-0de5e3e8487f8cf64"
          }
        }
      ]
    },
    {
      "module": "module.vpc_frankfurt_az3",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "module.vpc_frankfurt_az3.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:190563471247:vpc/vpc-0051f454d1c1ce8d8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.3.0.0/16",
            "default_network_acl_id": "acl-0684375823b8a17aa",
            "default_route_table_id": "rtb-0cf1bdc5997decddd",
            "default_security_group_id": "sg-0259ee87812a041c5",
            "dhcp_options_id": "dopt-d56a57be",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0051f454d1c1ce8d8",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0cf1bdc5997decddd",
            "owner_id": "190563471247",
            "tags": {
              "Name": "vpc_az3"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc_frankfurt_az2",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "module.vpc_frankfurt_az2.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:190563471247:vpc/vpc-0075f6bbfd1e967f0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.2.0.0/16",
            "default_network_acl_id": "acl-037553a6601091bec",
            "default_route_table_id": "rtb-0e36aea685259bb80",
            "default_security_group_id": "sg-045e2ecba3f73e539",
            "dhcp_options_id": "dopt-d56a57be",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0075f6bbfd1e967f0",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0e36aea685259bb80",
            "owner_id": "190563471247",
            "tags": {
              "Name": "vpc_az2"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc_frankfurt_az1",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "module.vpc_frankfurt_az1.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:190563471247:vpc/vpc-0de5e3e8487f8cf64",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-04d9361c5498918a4",
            "default_route_table_id": "rtb-03df114b413b79b36",
            "default_security_group_id": "sg-09d7ffbf092df4839",
            "dhcp_options_id": "dopt-d56a57be",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0de5e3e8487f8cf64",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-03df114b413b79b36",
            "owner_id": "190563471247",
            "tags": {
              "Name": "vpc_az1"
            }
          }
        }
      ]
    }
  ]
}